// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`REST endpoint testing for /admin/region-food-season-map create item when logged in as an admin and the item is valid Returns the expected result 1`] = `
Object {
  "foodId": "dd9ba012-8f8e-48af-9775-0139374dd94c",
  "regionId": "gbr",
  "seasonId": "eec0b2bb-4fbd-46df-b905-8d2ee2fb991a",
}
`;

exports[`REST endpoint testing for /admin/region-food-season-map delete item when logged in as an admin Returns the expected result 1`] = `
Object {
  "foodId": "dd9ba012-8f8e-48af-9775-0139374dd94c",
  "regionId": "gbr",
  "seasonId": "eec0b2bb-4fbd-46df-b905-8d2ee2fb991a",
}
`;

exports[`REST endpoint testing for /admin/region-food-season-map edit item when logged in as an admin Returns the expected result 1`] = `
Object {
  "foodId": "d1df368e-6ed1-4a50-bb7d-6163c15df1d3",
  "regionId": "usa-1",
  "seasonId": "41bcbb3a-5599-4f0c-8da9-3144cc5be6de",
}
`;

exports[`REST endpoint testing for /admin/region-food-season-map get all when logged in as an admin Returns the expected result 1`] = `
Array [
  Object {
    "foodId": "f6a680ee-6d6e-4c42-a99d-15e575c32c20",
    "id": "01b40983-876c-42f0-959d-38cf98fea1c3",
    "regionId": "gbr",
    "seasonId": "41bcbb3a-5599-4f0c-8da9-3144cc5be6de",
  },
  Object {
    "foodId": "f6a680ee-6d6e-4c42-a99d-15e575c32c20",
    "id": "22be80d3-5154-43e7-a750-f0d03e4ca91a",
    "regionId": "gbr",
    "seasonId": "eec0b2bb-4fbd-46df-b905-8d2ee2fb991a",
  },
  Object {
    "foodId": "dd9ba012-8f8e-48af-9775-0139374dd94c",
    "id": "29ab0c3c-3876-456a-adfc-7baa438a13ff",
    "regionId": "gbr",
    "seasonId": "41bcbb3a-5599-4f0c-8da9-3144cc5be6de",
  },
  Object {
    "foodId": "053c46cd-584e-46c5-a70d-b79b9ded3cca",
    "id": "053c46cd-584e-46c5-a70d-a39b9ded3cca",
    "regionId": "gbr",
    "seasonId": "41bcbb3a-5599-4f0c-8da9-3144cc5be6de",
  },
  Object {
    "foodId": "f6a680ee-6d6e-4c42-a99d-15e575c32c20",
    "id": "2214870d-ccb5-479d-b6d0-2d7fb5692857",
    "regionId": "usa-1",
    "seasonId": "eec0b2bb-4fbd-46df-b905-8d2ee2fb991a",
  },
]
`;

exports[`REST endpoint testing for /admin/region-food-season-map get single item when logged in as an admin Returns the expected result 1`] = `
Object {
  "foodId": "f6a680ee-6d6e-4c42-a99d-15e575c32c20",
  "id": "22be80d3-5154-43e7-a750-f0d03e4ca91a",
  "regionId": "gbr",
  "seasonId": "eec0b2bb-4fbd-46df-b905-8d2ee2fb991a",
}
`;
